# BestieTemplate.jl

./: .JuliaFormatter.toml  .all-contributorsrc  .copier-answers.yml  .editorconfig  .gitattributes  .gitignore  .lychee.toml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CITATION.cff.jinja  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Project.toml  Project.toml.jinja  README.dev.md  README.md  README.md.jinja  codecov.yml  copier.yml  features.toml  lychee.toml  versions.js  {% if UseCirrusCI %}.cirrus.yml{% endif %}.jinja
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
copier/: ci.yml  code-quality.yml  community.yml  constants.yml  essential.yml  strategy.yml
design/: 01-architecture.md  02-features-toml.md  03-generic-vs-branding.md  04-frontends.md  05-releases-and-security.md  06-decisions.md  index.md
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  Project.toml.jinja  make.jl  make.jl.jinja
python/: README.md  hatch_build.py  pyproject.toml
python/src/bestie_template/: __init__.py  cli.py
python/src/copier_features/: __init__.py  answers.py  errors.py  ops.py  registry.py
python/tests/: conftest.py  test_answers.py  test_branding.py  test_cli.py  test_generic_no_branding.py  test_integration.py  test_ops.py  test_registry.py
src/: BestieTemplate.jl  COPIERTemplate.jl  Copier.jl  api.jl  friendly.jl  guess.jl  utils.jl  {{ PackageName }}.jl.jinja
template/: .JuliaFormatter.toml.jinja  .editorconfig.jinja  .gitignore  .lychee.toml.jinja  .markdownlint.json.jinja  .pre-commit-config.yaml.jinja  CITATION.cff.jinja  Project.toml.jinja  README.md.jinja  lychee.toml.jinja  {% if AddAgentsMd %}AGENTS.md{% endif %}.jinja  {% if AddAllcontributors %}.all-contributorsrc{% endif %}.jinja  {% if AddChangelog %}CHANGELOG.md{% endif %}.jinja  (+12 more)
test/: Project.toml  utils.jl  (+12 more)
(+1195 files in other folders)
