[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bestie-template"
version = "0.1.0.dev0"
description = "Python interface to the BestieTemplate copier template: add template features to Julia packages without Julia"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abel Soares Siqueira" }]
keywords = ["copier", "template", "julia", "bestie"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "copier>=9.14,<10",
  "pyyaml>=6",
]

[project.urls]
Repository = "https://github.com/JuliaBesties/BestieTemplate.jl"
Documentation = "https://JuliaBesties.github.io/BestieTemplate.jl"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/copier_features", "src/bestie_template"]

# The feature registry lives at the repository root (single source of truth,
# also read by the Julia package). A build hook copies it into the branding
# package for every non-editable build path (wheel-from-checkout, sdist,
# wheel-from-sdist); editable installs fall back to the repo-root copy at
# runtime (see bestie_template.bundled_registry_path).
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "C4",  # comprehensions
  "SIM", # simplify
  "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: runs the real copier against the local template checkout",
]
